--- a/mis flotas/carrito.html
+++ b/mis flotas/carrito.html
@@ -1000,13 +1000,16 @@
       <button class="notif-close" onclick="cerrarNotificaciones()">&times;</button>
     </div>
     <div class="notif-body">
-      <div class="notif-empty">
+      <div id="notif-list" style="display: none;"></div>
+      <div class="notif-empty" id="notif-empty">
         <div class="notif-empty-icon"><img src="../img/Alerta.svg" alt="Sin notificaciones"></div>
         <h4>No hay notificaciones</h4>
-        <p>Cuando tengas novedades sobre tus flotas, productos o pedidos, aparecerán aquí.</p>
+        <p>Cuando tengas novedades sobre productos, ofertas o actualizaciones, aparecerán aquí.</p>
       </div>
     </div>
   </div>
+
+  <script src="../notificaciones.js"></script>
 
   <!-- Modal de Previsualizacion de OC -->
   <div id="oc-modal-overlay" class="oc-modal-overlay" onclick="cerrarModalOC()"></div>
