--- a/administrador/vista_administrador.html
+++ b/administrador/vista_administrador.html
@@ -292,12 +292,14 @@
 
       <!-- Lista de campañas -->
       <div id="campanas-list" style="display: flex; flex-direction: column; gap: 20px; margin-bottom: 24px;">
-        <!-- Aquí se renderizan las campañas -->
-        <div style="text-align: center; padding: 60px 20px; background: #f8f9fa; border-radius: 12px; border: 2px dashed #ddd;">
-          <img src="../img/Descuento.svg" alt="" style="width: 64px; height: 64px; opacity: 0.3; margin-bottom: 16px;">
-          <p style="color: #999; font-size: 15px; margin-bottom: 8px;">No hay campañas creadas</p>
-          <p style="color: #bbb; font-size: 13px;">Haz clic en "+ Nueva Campaña" para comenzar</p>
-        </div>
+        <!-- Aquí se renderizan las campañas dinámicamente -->
+      </div>
+      
+      <!-- Empty State -->
+      <div id="campanas-empty-state" style="text-align: center; padding: 60px 20px; background: #f8f9fa; border-radius: 12px; border: 2px dashed #ddd; margin-bottom: 24px;">
+        <img src="../img/Descuento.svg" alt="" style="width: 64px; height: 64px; opacity: 0.3; margin-bottom: 16px;">
+        <p style="color: #999; font-size: 15px; margin-bottom: 8px;">No hay campañas creadas</p>
+        <p style="color: #bbb; font-size: 13px;">Haz clic en "+ Nueva Campaña" para comenzar</p>
       </div>
 
       <!-- Botón guardar -->
