Correcciones generales, actualización de vistas y datos

--- a/administrador/vista_administrador.html
+++ b/administrador/vista_administrador.html
@@ -234,13 +234,12 @@
         <table class="sc-table">
           <thead>
             <tr>
-              <th>Cod. Cliente</th>
-              <th>Repuesto</th>
-              <th>Marca</th>
               <th>Línea</th>
               <th>Cód. StarClutch</th>
-              <th style="text-align: center;">Recomendar</th>
-              <th>Precio</th>
+              <th>Descripción</th>
+              <th>Marca</th>
+              <th>Cód. Cliente</th>
+              <th>Precio autorizado</th>
               <th>Descuento</th>
               <th>Stock</th>
               <th style="text-align: center;">Fotos</th>
