antes de la tormenta

--- a/administrador/vista_administrador.html
+++ b/administrador/vista_administrador.html
@@ -245,13 +245,14 @@
               <th style="text-align: center;">Fotos</th>
               <th style="text-align: center; width: 100px;">Ficha Técnica</th>
               <th style="text-align: center;">Editar</th>
+              <th style="text-align: center;">Recomendar</th>
             </tr>
           </thead>
           <tbody id="tbody-repuestos-admin">
              <tr>
-                <td colspan="12" style="text-align:center; padding:30px; color:#999;">
-                    Seleccione un cliente para ver sus repuestos.
-                </td>
+               <td colspan="12" style="text-align:center; padding:30px; color:#999;">
+                  Seleccione un cliente para ver sus repuestos.
+               </td>
              </tr>
           </tbody>
         </table>
